Down to just one code analysis warning now.

--- a/TfsPortalRadiatorScreenSaver/TfsPortalRadiatorScreenSaver.csproj
+++ b/TfsPortalRadiatorScreenSaver/TfsPortalRadiatorScreenSaver.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="ScreenSaverForm.cs">
       <SubType>Form</SubType>
